export const snapshot = {};

snapshot[`extractApi: snapshot basic 1`] = `
{
  entry: "Graph",
  root: {
    children: [
      {
        arguments: [],
        comment: undefined,
        kind: "endpoint",
        name: "group",
        path: [
          "Graph",
          "group",
        ],
        returns: {
          kind: "ref",
          name: "Group",
          params: [],
        },
      },
      {
        arguments: [],
        comment: undefined,
        kind: "endpoint",
        name: "user",
        path: [
          "Graph",
          "user",
        ],
        returns: {
          kind: "ref",
          name: "User",
          params: [],
        },
      },
      {
        arguments: [],
        comment: undefined,
        kind: "endpoint",
        name: "randomItem",
        path: [
          "Graph",
          "randomItem",
        ],
        returns: {
          kind: "union",
          types: [
            {
              kind: "ref",
              name: "User",
              params: [],
            },
            {
              kind: "ref",
              name: "Group",
              params: [],
            },
          ],
        },
      },
    ],
    comment: undefined,
    kind: "namespace",
    name: "Graph",
    path: [
      "Graph",
    ],
  },
  types: [
    {
      comment: undefined,
      kind: "alias",
      name: "Role",
      parameters: [],
      type: {
        kind: "union",
        types: [
          {
            kind: "literal",
            value: "admin",
          },
          {
            kind: "literal",
            value: "user",
          },
        ],
      },
    },
    {
      comment: undefined,
      kind: "interface",
      name: "User",
      parameters: [],
      properties: [
        {
          comment: undefined,
          name: "name",
          optional: false,
          type: {
            kind: "primitive",
            type: "string",
          },
        },
        {
          comment: undefined,
          name: "age",
          optional: false,
          type: {
            kind: "nullable",
            type: {
              kind: "primitive",
              type: "number",
            },
          },
        },
        {
          comment: undefined,
          name: "group",
          optional: false,
          type: {
            kind: "ref",
            name: "Group",
            params: [],
          },
        },
        {
          comment: undefined,
          name: "maybeGroup",
          optional: false,
          type: {
            kind: "nullable",
            type: {
              kind: "ref",
              name: "Group",
              params: [],
            },
          },
        },
      ],
    },
    {
      comment: undefined,
      kind: "interface",
      name: "Group",
      parameters: [],
      properties: [
        {
          comment: undefined,
          name: "name",
          optional: false,
          type: {
            kind: "primitive",
            type: "string",
          },
        },
        {
          comment: undefined,
          name: "users",
          optional: false,
          type: {
            items: {
              kind: "primitive",
              type: "string",
            },
            kind: "array",
          },
        },
      ],
    },
    {
      comment: undefined,
      kind: "interface",
      name: "Graph",
      parameters: [],
      properties: [
        {
          comment: undefined,
          name: "group",
          optional: false,
          type: {
            arguments: [],
            kind: "function",
            returns: {
              kind: "ref",
              name: "Group",
              params: [],
            },
          },
        },
        {
          comment: undefined,
          name: "user",
          optional: false,
          type: {
            arguments: [],
            kind: "function",
            returns: {
              kind: "ref",
              name: "User",
              params: [],
            },
          },
        },
        {
          comment: undefined,
          name: "randomItem",
          optional: false,
          type: {
            arguments: [],
            kind: "function",
            returns: {
              kind: "union",
              types: [
                {
                  kind: "ref",
                  name: "User",
                  params: [],
                },
                {
                  kind: "ref",
                  name: "Group",
                  params: [],
                },
              ],
            },
          },
        },
      ],
    },
  ],
}
`;

snapshot[`extractApi: snapshot todolist 1`] = `
{
  entry: "Graph",
  root: {
    children: [
      {
        arguments: [],
        comment: undefined,
        kind: "endpoint",
        name: "auth",
        path: [
          "Graph",
          "auth",
        ],
        returns: {
          kind: "nullable",
          type: {
            kind: "object",
            properties: [
              {
                comment: undefined,
                name: "user",
                optional: false,
                type: {
                  kind: "ref",
                  name: "User",
                  params: [],
                },
              },
            ],
          },
        },
      },
      {
        children: [
          {
            arguments: [
              {
                comment: undefined,
                name: "id",
                optional: false,
                type: {
                  kind: "primitive",
                  type: "string",
                },
              },
            ],
            comment: undefined,
            kind: "endpoint",
            name: "byId",
            path: [
              "Graph",
              "users",
              "byId",
            ],
            returns: {
              kind: "ref",
              name: "User",
              params: [],
            },
          },
        ],
        comment: undefined,
        kind: "namespace",
        name: "users",
        path: [
          "Graph",
          "users",
        ],
      },
      {
        children: [
          {
            arguments: [
              {
                comment: undefined,
                name: "pagination",
                optional: true,
                type: {
                  kind: "ref",
                  name: "PaginationParams",
                  params: [],
                },
              },
            ],
            comment: undefined,
            kind: "endpoint",
            name: "all",
            path: [
              "Graph",
              "apps",
              "all",
            ],
            returns: {
              items: {
                kind: "ref",
                name: "App",
                params: [],
              },
              kind: "array",
            },
          },
          {
            arguments: [
              {
                comment: undefined,
                name: "id",
                optional: false,
                type: {
                  kind: "primitive",
                  type: "string",
                },
              },
            ],
            comment: undefined,
            kind: "endpoint",
            name: "byId",
            path: [
              "Graph",
              "apps",
              "byId",
            ],
            returns: {
              kind: "ref",
              name: "App",
              params: [],
            },
          },
        ],
        comment: undefined,
        kind: "namespace",
        name: "apps",
        path: [
          "Graph",
          "apps",
        ],
      },
      {
        arguments: [],
        comment: undefined,
        kind: "endpoint",
        name: "flip",
        path: [
          "Graph",
          "flip",
        ],
        returns: {
          kind: "union",
          types: [
            {
              kind: "ref",
              name: "CoinHeads",
              params: [],
            },
            {
              kind: "ref",
              name: "CoinTails",
              params: [],
            },
          ],
        },
      },
      {
        arguments: [],
        comment: undefined,
        kind: "endpoint",
        name: "config",
        path: [
          "Graph",
          "config",
        ],
        returns: {
          kind: "ref",
          name: "Config",
          params: [],
        },
      },
    ],
    comment: undefined,
    kind: "namespace",
    name: "Graph",
    path: [
      "Graph",
    ],
  },
  types: [
    {
      comment: undefined,
      kind: "interface",
      name: "PaginationParams",
      parameters: [],
      properties: [
        {
          comment: undefined,
          name: "page",
          optional: true,
          type: {
            kind: "primitive",
            type: "number",
          },
        },
        {
          comment: undefined,
          name: "limit",
          optional: true,
          type: {
            kind: "primitive",
            type: "number",
          },
        },
      ],
    },
    {
      comment: undefined,
      kind: "interface",
      name: "User",
      parameters: [],
      properties: [
        {
          comment: undefined,
          name: "userName",
          optional: false,
          type: {
            kind: "primitive",
            type: "string",
          },
        },
        {
          comment: undefined,
          name: "app",
          optional: false,
          type: {
            kind: "ref",
            name: "App",
            params: [],
          },
        },
      ],
    },
    {
      comment: undefined,
      kind: "interface",
      name: "App",
      parameters: [],
      properties: [
        {
          comment: undefined,
          name: "appName",
          optional: false,
          type: {
            kind: "primitive",
            type: "string",
          },
        },
        {
          comment: undefined,
          name: "todos",
          optional: false,
          type: {
            items: {
              kind: "ref",
              name: "Todo",
              params: [],
            },
            kind: "array",
          },
        },
      ],
    },
    {
      comment: undefined,
      kind: "interface",
      name: "Todo",
      parameters: [],
      properties: [
        {
          comment: undefined,
          name: "todoName",
          optional: false,
          type: {
            kind: "primitive",
            type: "string",
          },
        },
        {
          comment: undefined,
          name: "done",
          optional: false,
          type: {
            kind: "primitive",
            type: "boolean",
          },
        },
      ],
    },
    {
      comment: undefined,
      kind: "interface",
      name: "CoinHeads",
      parameters: [],
      properties: [
        {
          comment: undefined,
          name: "foo",
          optional: false,
          type: {
            kind: "primitive",
            type: "string",
          },
        },
      ],
    },
    {
      comment: undefined,
      kind: "interface",
      name: "CoinTails",
      parameters: [],
      properties: [
        {
          comment: undefined,
          name: "bar",
          optional: false,
          type: {
            kind: "primitive",
            type: "string",
          },
        },
      ],
    },
    {
      comment: undefined,
      kind: "interface",
      name: "Config",
      parameters: [],
      properties: [
        {
          comment: undefined,
          name: "env",
          optional: false,
          type: {
            kind: "object",
            properties: [
              {
                comment: undefined,
                name: "version",
                optional: false,
                type: {
                  kind: "primitive",
                  type: "string",
                },
              },
              {
                comment: undefined,
                name: "num",
                optional: false,
                type: {
                  kind: "primitive",
                  type: "number",
                },
              },
              {
                comment: undefined,
                name: "str",
                optional: false,
                type: {
                  kind: "primitive",
                  type: "string",
                },
              },
              {
                comment: undefined,
                name: "bool",
                optional: false,
                type: {
                  kind: "primitive",
                  type: "boolean",
                },
              },
            ],
          },
        },
      ],
    },
    {
      comment: undefined,
      kind: "interface",
      name: "Graph",
      parameters: [],
      properties: [
        {
          comment: undefined,
          name: "auth",
          optional: false,
          type: {
            arguments: [],
            kind: "function",
            returns: {
              kind: "nullable",
              type: {
                kind: "object",
                properties: [
                  {
                    comment: undefined,
                    name: "user",
                    optional: false,
                    type: {
                      kind: "ref",
                      name: "User",
                      params: [],
                    },
                  },
                ],
              },
            },
          },
        },
        {
          comment: undefined,
          name: "users",
          optional: false,
          type: {
            kind: "object",
            properties: [
              {
                comment: undefined,
                name: "byId",
                optional: false,
                type: {
                  arguments: [
                    {
                      comment: undefined,
                      name: "id",
                      optional: false,
                      type: {
                        kind: "primitive",
                        type: "string",
                      },
                    },
                  ],
                  kind: "function",
                  returns: {
                    kind: "ref",
                    name: "User",
                    params: [],
                  },
                },
              },
            ],
          },
        },
        {
          comment: undefined,
          name: "apps",
          optional: false,
          type: {
            kind: "object",
            properties: [
              {
                comment: undefined,
                name: "all",
                optional: false,
                type: {
                  arguments: [
                    {
                      comment: undefined,
                      name: "pagination",
                      optional: true,
                      type: {
                        kind: "ref",
                        name: "PaginationParams",
                        params: [],
                      },
                    },
                  ],
                  kind: "function",
                  returns: {
                    items: {
                      kind: "ref",
                      name: "App",
                      params: [],
                    },
                    kind: "array",
                  },
                },
              },
              {
                comment: undefined,
                name: "byId",
                optional: false,
                type: {
                  arguments: [
                    {
                      comment: undefined,
                      name: "id",
                      optional: false,
                      type: {
                        kind: "primitive",
                        type: "string",
                      },
                    },
                  ],
                  kind: "function",
                  returns: {
                    kind: "ref",
                    name: "App",
                    params: [],
                  },
                },
              },
            ],
          },
        },
        {
          comment: undefined,
          name: "flip",
          optional: false,
          type: {
            arguments: [],
            kind: "function",
            returns: {
              kind: "union",
              types: [
                {
                  kind: "ref",
                  name: "CoinHeads",
                  params: [],
                },
                {
                  kind: "ref",
                  name: "CoinTails",
                  params: [],
                },
              ],
            },
          },
        },
        {
          comment: undefined,
          name: "config",
          optional: false,
          type: {
            arguments: [],
            kind: "function",
            returns: {
              kind: "ref",
              name: "Config",
              params: [],
            },
          },
        },
      ],
    },
  ],
}
`;
